package com.project.clankarchive.models.entities;

public class Weapon {
}
