@startuml
!theme hacker

'Class Diagram - Class
class User{
-idUser : Long
-username : String
-email : String
-birthDate : date
-age : int
}
class Role{
-idRole : Long
-roleName : String
}
class Review{
-idReview : Long
-like : boolean
-review : String
}
class Game{
-idGame : Long
-gameName : String
-gameImage : String
-gameTag : String
-gamePlatform : String
-releaseDate : date
-gameSummary : String
-ageRestriction : int
}
class Article{
-idArticle : Long
}
class Categorie{
-idCategorie : Long
}
class Hero{
-idHero : Long
-heroName : String
-heroImage : String
-heroSummary : String
}
class Weapon{
-idWeapon : Long
}
class Gadget{
-idGadget : Long
}
class Enemy{
-idEnemy : Long
}
class Vehicle{
-idVehicle : Long
}
class Location{
-idLocation : Long
}
class Planet{
-idPlanet : Long
}
class Editor{
-idEditor : Long
-editorName : String
-editorImage : String
}
class Developer{
-idDeveloper : Long
-developerName : String
-developerImage : String
}

'Class Diagram - Relation
Role "*" - "*" User :"\t\t"

Game - Article

Game "*" -- "*" Editor :"\t\t"
Game "*" -- "*" Developer :"\t\t"

'hide circle
@enduml
